--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-jtype: MyDummyExecutor
+jtype: TorchObjectDetectionSegmenter
 metas:
   py_modules:
-    - MODULE_NAME.py
+    - torch_object_detection_segmenter.py
