--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 torch==1.8.1
 torchvision==0.9.1
-jina[hub]==2.0.0
+jina[hub]==2.0.3
+jina-commons @ git+https://github.com/jina-ai/jina-commons.git#egg=jina-commons
