--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 torch==1.8.1
 torchvision==0.9.1
-jina[hub]==2.0.3
-jina-commons @ git+https://github.com/jina-ai/jina-commons.git#egg=jina-commons
+jina~=2.0
+jina-commons @ git+https://github.com/jina-ai/jina-commons.git@v0.0.1#egg=jina-commons
